WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
77491
REGRESSION (
r105401
-105403): Blue flash on css border transition
https://bugs.webkit.org/show_bug.cgi?id=77491
Summary
REGRESSION (r105401-105403): Blue flash on css border transition
Vangelis Kokkevis
Reported
2012-01-31 16:28:00 PST
To reproduce: 1. Visit
http://www.webkit.org/blog/138/css-animation/
2. Hover over the div that reads: "This div will acquire a slightly thicker blue border when hovered.". Mouse out. Notice how the entire page flashes blue . This is happening both with the latest WebKit nightly (Version 5.1.2 (7534.52.7,
r106392
)) and Chrome Canary . Reported also in the chromium issue tracker as:
http://code.google.com/p/chromium/issues/detail?id=111304
Attachments
Patch
(4.51 KB, patch)
2012-02-03 06:15 PST
,
Alexis Menard (darktears)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Vangelis Kokkevis
Comment 1
2012-01-31 17:13:21 PST
Bisected to the following WebKit revision range:
http://trac.webkit.org/log/trunk/?rev=105427&stop_rev=105390&verbose=on
From a quick scan, here's a couple of possible suspects: * [CSSRegions]Add support for background-color in region styling
https://bugs.webkit.org/show_bug.cgi?id=71488
http://trac.webkit.org/changeset/105426/trunk
[
mihnea@adobe.com
] * Strange Result for getComputedStyle on borderWidth set in em
https://bugs.webkit.org/show_bug.cgi?id=18294
http://trac.webkit.org/changeset/105403/trunk
[
alexis.menard@openbossa.org
] * Differentiate between SVG/CSS width/height attributes/properties
https://bugs.webkit.org/show_bug.cgi?id=76447
http://trac.webkit.org/changeset/105402/trunk
[
zimmermann@webkit.org
] * Cache RenderStyle pointer as a method to avoid performance regression for region styling
https://bugs.webkit.org/show_bug.cgi?id=76265
http://trac.webkit.org/changeset/105394/trunk
[
mihnea@adobe.com
]
Vangelis Kokkevis
Comment 2
2012-01-31 17:16:20 PST
Correcting the title as the issue is really happening on css border width animation transition. The page is not triggering the compositor at all. Maybe that makes:
http://trac.webkit.org/changeset/105403/trunk
a more likely suspect.
Mihnea Ovidenie
Comment 3
2012-02-01 04:53:22 PST
Hi, The first change mentioned: * [CSSRegions]Add support for background-color in region styling
https://bugs.webkit.org/show_bug.cgi?id=71488
http://trac.webkit.org/changeset/105426/trunk
[
mihnea@adobe.com
] contains changes that are no longer in the trunk.
Alexey Proskuryakov
Comment 4
2012-02-01 10:00:29 PST
Further reduced the range to
r105401
-105403.
Alexey Proskuryakov
Comment 5
2012-02-01 10:01:14 PST
<
rdar://problem/10789804
>
Simon Fraser (smfr)
Comment 6
2012-02-01 10:08:36 PST
Almost certainly
http://trac.webkit.org/changeset/105402
Antti Koivisto
Comment 7
2012-02-01 10:43:16 PST
A reduced test case would be cool.
Alexis Menard (darktears)
Comment 8
2012-02-01 10:57:15 PST
(In reply to
comment #7
)
> A reduced test case would be cool.
https://gist.github.com/1718650
seems to reproduce an ugly blue rectangle on the Qt port.
Alexis Menard (darktears)
Comment 9
2012-02-01 11:04:23 PST
(In reply to
comment #8
)
> (In reply to
comment #7
) > > A reduced test case would be cool. > >
https://gist.github.com/1718650
> > seems to reproduce an ugly blue rectangle on the Qt port.
Clicking on item2 then item1. Ok the test case is a bit weird but it was for another bug.
Alexis Menard (darktears)
Comment 10
2012-02-01 12:29:34 PST
(In reply to
comment #9
)
> (In reply to
comment #8
) > > (In reply to
comment #7
) > > > A reduced test case would be cool. > > > >
https://gist.github.com/1718650
> > > > seems to reproduce an ugly blue rectangle on the Qt port. > > Clicking on item2 then item1. Ok the test case is a bit weird but it was for another bug.
http://trac.webkit.org/changeset/105403/trunk
is the culprit. Reverting it fixes the issue. I'm looking at it right now as I did the original patch.
Alexis Menard (darktears)
Comment 11
2012-02-03 06:15:46 PST
Created
attachment 125314
[details]
Patch
WebKit Review Bot
Comment 12
2012-02-03 10:21:39 PST
Comment on
attachment 125314
[details]
Patch Clearing flags on attachment: 125314 Committed
r106672
: <
http://trac.webkit.org/changeset/106672
>
WebKit Review Bot
Comment 13
2012-02-03 10:21:44 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug