REGRESSION (r105401-105403): Blue flash on css border transition https://bugs.webkit.org/show_bug.cgi?id=77491

Reviewed by Simon Fraser.

Source/WebCore:

The new blend function added with r105403 takes unsigned as parameters therefore
we have to be careful to not overflow in case the to is less than from (animating
from 400 to 0 for example).

Test: animations/animation-border-overflow.html

* platform/animation/AnimationUtilities.h:
(WebCore::blend):

LayoutTests:

* animations/animation-border-overflow-expected.txt: Added.
* animations/animation-border-overflow.html: Added.


Canonical link: https://commits.webkit.org/94612@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106672 268f45cc-cd09-0410-ab3c-d52691b4dbfc